# RosterCopiilot

./: .gitignore  pyproject.toml
backend/: 2026_HC 時間表(HKU).xlsx  護送個案總表(2026)(HKU).xlsx
backend/app/: __init__.py  main.py  models.py
backend/app/api/: __init__.py  changes.py  export.py  schedule.py
backend/app/services/: __init__.py  excel_export.py  impact_analyzer.py  mock_scheduler.py
docs/: transcript.docx  照顧員工作分工表2026(HKU).xlsx
docs/spec/: RosterCopiilot_Technical_Spec_v0.1.md  api_contract.md  audit_item_schema.json  benchmark_cases.json  canonical_schema.md  clarification_packet.md  data_dictionary.md  evaluation_metrics.md  excel_io_contract.md  excel_semantics.md  human_review_policy.md  mock_data_spec.md  ngo_data_request_templates.md  optimization_model.md  rescheduling_algorithm.md  roadmap.md  rulebook.md  schema.json  system_architecture.md
frontend/: index.html
